--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" ref="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -384,7 +384,7 @@
         <form class="modal_form">
             <div class="modal_field">
                 <label for="username" class="modal_label">
-                    <span class="modal_text">Ім'я</span>
+                    Ім'я
                 </label>
                 <div class="modal_wrap">
                     <input id="username" type="text" name="text" class="modal_input"/>
@@ -395,7 +395,7 @@
             </div>
             <div class="modal_field">
                 <label for="user_tel" class="modal_label">
-                    <span class="modal_text">Телефон</span>
+                    Телефон
                 </label>
                 <div class="modal_wrap">
                     <input id="user_tel" type="tel" name="phone" class="modal_input"/>
@@ -406,7 +406,7 @@
             </div>
             <div class="modal_field">
                 <label for="user_mail" class="modal_label">
-                    <span class="modal_text">Пошта</span>
+                    Пошта
                 </label>
                 <div class="modal_wrap">
                     <input id="user_mail" type="email" name="email" class="modal_input"/>
@@ -417,7 +417,7 @@
             </div>
             <div class="modal_textarea">
                 <label for="user_comment" class="modal_label">
-                    <span class="modal_text">Коментар</span>
+                    Коментар
                 </label>
                 <textarea id="user_comment" name="comment"  placeholder="Введіть текст" class="modal_comment"></textarea>
             </div>
@@ -429,7 +429,7 @@
                             <use href="./images/icons.svg#check"></use>
                         </svg>
                     </span>
-                    <span class="modal_text">Погоджуюся з розсилкою та приймаю <a href="" class="modal_check_link link">Умови договору</a></span>
+                    Погоджуюся з розсилкою та приймаю &nbsp;<a href="" class="modal_check_link link">Умови договору</a>
                 </label>
             </div>
             <button type="submit" class="modal_submit_btn">Відправити</button>
