--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" ref="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -235,14 +235,14 @@
         </div>
         <div class="mailing">
             <h3 class="mailing_title">Підпишіться на розсилку</h3>
-            <div class="mailing_flex">
+            <form class="mailing_flex">
                 <input type="email" name="email" placeholder="E-mail" class="mailing_input"/>
                 <button type="submit" class="mailing_btn">Підписатися
                     <svg class="mailing_icon" width="24px" height="24px">
                         <use href="./images/icons.svg#send"></use>
                     </svg>
                 </button>
-            </div>
+            </form>
         </div>
     </div>
 </footer>
